--- a/package.json
+++ b/package.json
@@ -4,6 +4,7 @@
   "description": "A style guide application for SEI",
   "main": "index.js",
   "scripts": {
+    "start": "node server.js",
     "dev": "npx nodemon server.js",
     "test": "node --experimental-vm-modules --no-warnings  node_modules/.bin/jest -i --verbose --watch"
   },
@@ -12,6 +13,8 @@
   "type": "module",
   "dependencies": {
     "bcrypt": "^5.0.1",
+    "cors": "^2.8.5",
+    "dotenv": "^10.0.0",
     "express": "^4.17.1",
     "jsonwebtoken": "^8.5.1",
     "mongoose": "^5.12.10",
